fixed model path for Taurus HCV and Heatshield (broken by RO)

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -57,6 +57,19 @@
 		animationName = LESDeploy
 		allowManualControl = no
 	}
+
+	// Fix wrong path for model in RO
+	MODEL
+	{
+		model = RSCapsuledyne/Parts/TaurusHCV/model
+	}
 }
 
-
+@PART[TaurusHeatshield]:FOR[KSPTM]:AFTER[RealismOverhaul]
+{
+	// Fix wrong path for model in RO
+	MODEL
+	{
+		model = RSCapsuledyne/Parts/Heatshield/model
+	}
+}
