--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -67,3 +67,8 @@
 		model = RSCapsuledyne/Parts/Heatshield/model
 	}
 }
+@PART[*]:FINAL
+{
+	//Add part name to description for easier identification.  
+	@description = #$description$ $/name$
+}
