--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -67,8 +67,40 @@
 		model = RSCapsuledyne/Parts/Heatshield/model
 	}
 }
+
 @PART[*]:FINAL
 {
 	//Add part name to description for easier identification.  
 	@description = #$description$ $/name$
+}
+
+RESOURCE_DEFINITION
+{
+	//Add Pu-238 for JDiminishingRTG
+    name        = Plutonium238
+    density     = 0.019816 //Doesn't really matter, since the MHW-RTG only uses 1 fuel type...
+    unitcost    = 80 //This doesn't really matter all that much.
+    flowmode    = NO_FLOW
+    transfer    = NONE
+    isTweakable = true
+}
+
+RTGFUELCONFIG 
+{
+	//Add Pu-238 for JDiminishingRTG
+    name     = Plutonium238 // MUST have matching name in RESOURCE_DEFINITION
+    halflife = 301.84         // in kerbal years (earth*3.43)
+    pep      = 5.3333333 // Power density of the material (Watts/kilogram).  Calculated to give 157 W at mission start, and decreased by a factor of 10^-3, since it was performing incorrectly.  KSP uses t for mass, not kg... ~C_Z
+}
+
+@PART[rtg]:FOR[KSPtM]:AFTER[JDiminishingRTG]:AFTER[RealismOverhaul]
+{
+	//JDiminishingRTG support for MHW-RTG
+    !MODULE[ModuleGenerator] {}
+	@MODULE[ModuleDiminishingRTG]
+    {
+        @efficiency = 0.065416667 // factor (0..1) of 'pep' into ElectricCharge 
+        @volume = 0.22708922   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
+		
+    }
 }
