--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -93,9 +93,10 @@ RTGFUELCONFIG
     pep      = 5.3333333 // Power density of the material (Watts/kilogram).  Calculated to give 157 W at mission start, and decreased by a factor of 10^-3, since it was performing incorrectly.  KSP uses t for mass, not kg... ~C_Z
 }
 
-@PART[rtg]:FOR[KSPtM]:AFTER[JDiminishingRTG]:AFTER[RealismOverhaul]
+@PART[rtg]:FOR[KSPtM]:AFTER[JDiminishingRTG]
 {
 	//JDiminishingRTG support for MHW-RTG
+	@mass = 0.0332 //37.7kg-4.5kg
     !MODULE[ModuleGenerator] {}
 	@MODULE[ModuleDiminishingRTG]
     {
@@ -103,4 +104,10 @@ RTGFUELCONFIG
         @volume = 0.22708922   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
 		
     }
+}
+
+@PART[rtg]:FINAL
+{
+	//Additional JDiminishingRTG support for MHW-RTG
+	@mass = 0.0332 //37.7kg-4.5kg
 }
