(Minor) Cfg Update
Updated comments.

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -108,6 +108,6 @@ RTGFUELCONFIG
 
 @PART[rtg]:FINAL
 {
-	//Additional JDiminishingRTG support for MHW-RTG
+	//Additional JDiminishingRTG support for MHW-RTG, changing mass to account for addition of 4.5kg of Pu-238
 	@mass = 0.0332 //37.7kg-4.5kg
 }
