--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -111,3 +111,24 @@ RTGFUELCONFIG
 	//Additional JDiminishingRTG support for MHW-RTG, changing mass to account for addition of 4.5kg of Pu-238
 	@mass = 0.0332 //37.7kg-4.5kg
 }
+
+@PART[TaurusHCV]:FOR[KSPTM]:AFTER[RealismOverhaul]
+{	
+	//Add CoMShifter for Re-entry.  I'd personally rather do this with fuel tanks and actual ballast, but we can work on that later.  
+	+MODULE
+	{
+		+name = CoMShifter
+		+DescentModeCoM = 0.0, 0.0, -0.2
+	}
+}
+
+@PART[mk2CargoBayS]:FOR[KSPTM]
+{
+	//Sample addition of Tweakscale support.
+	MODULE
+	{
+		name = TweakScale
+		type = free
+		defaultScale = 100
+	}
+}
