addition of telemachus to RT Antennas

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -48,6 +48,14 @@
 		diskSpace = 10000000
 	}
 }
+@PART[*]:HAS[@MODULE[ModuleRTAntenna]]:NEEDS[Telemachus]:Final
+//Addition of Telemachus to all antennas, if Telemachus is installed
+{
+        MODULE
+    {
+        name = TelemachusDataLink
+    }
+}
 @PART[TaurusHCV]:FOR[KSPTM]:AFTER[RealismOverhaul]
 {
 	//Fix retrorocket/LES rocket behaviour.
