Fixes: https://github.com/KSPtoMars/KSPtoMarsTools/issues/14

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -131,3 +131,8 @@ RTGFUELCONFIG
 		defaultScale = 100
 	}
 }
+@PART[NP_FreyjaCapsule]:FOR[KSPTM]:AFTER[RealismOverhaul]
+{
+  @node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2
+  @node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6
+}
