Revert "Cfg update"
This reverts commit 97d20755051a9834bcf7f8668e4ce2396916af36.

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -131,36 +131,7 @@ RTGFUELCONFIG
 		defaultScale = 100
 	}
 }
-
-@PART[liquidEngineMiniRescale]:AFTER[RealismOverhaul]
-{
-	//Fix model
-	%MODEL
-	{
-		%model = AIES_Aerospace/Engine/AIESenginegalaxvr2/model
-		%scale = 3.2426875, 3.2426875, 3.2426875
-	}
-	@scale = 3.2426875
-	%node_stack_top = 0.0, 0.15, 0.0, 0.0, 1.0, 0.0, 1
-	%node_stack_bottom = 0.0, -0.48, 0.0, 0.0, -1.0, 0.0, 1
-	!node_attach = DELETE
-	//Add pedantry
-	@title = Aestus II / RS-72 [1.5m]
-	%manufacturer = EADS Astrium
-	@description = Small MMH/NTO upper stage rocket engine, designed as a collaboration between Pratt & Whitney Rocketdyne and Airbus DS, Ottobrunn.  Based off of the design of the Ariane 5's Aestus upper stage engine, with the addition of a turbopump and power plant developed by PWR.
-	//Fix ignition count
-	@MODULE[ModuleEngines*]
-	{
-		@ignitions = 20 //Based on data from http://cs.astrium.eads.net/sp/launcher-propulsion/rocket-engines/aestus-rs72-rocket-engine.html
-	}
-}
-
-@PART[NP_FreyjaCapsule]:AFTER[RealismOverhaul] 
-{
-	//Fix node positions
-	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+0.4
-	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+0.4
-}@PART[NP_FreyjaCapsule]:FOR[KSPTM]:AFTER[RealismOverhaul]
+@PART[NP_FreyjaCapsule]:FOR[KSPTM]:AFTER[RealismOverhaul]
 {
   @node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2
   @node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6
