Fixed crewCabin and inflato1 changes

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -161,43 +161,43 @@ RTGFUELCONFIG
 	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
 }
-@PART[inflato1]:FOR[KSPTM]
+@PART[inflato1]:FOR[KSPTM]:AFTER[RealismOverhaul]
 {
 	//Changing oxygen = 1895036, food = 20838
 	@MODULE[ModuleFuelTanks]
 	{
 		@TANK[Food]
 		{
-			amount = 20838
-			maxAmount = 20838
+			@amount = 20838
+			@maxAmount = 20838
 		}
 		@TANK[Oxygen]
 		{
-			amount = 1895036
-			maxAmount = 1895036
+			@amount = 1895036
+			@maxAmount = 1895036
 		}
 	}
 
 }
-@PART[crewCabin]:FINAL
+@PART[crewCabin]:AFTER[RealismOverhaul]
 {
 	//Changing oxygen = 710639, food = 7815, water = 4800.
 	@MODULE[ModuleFuelTanks]
 	{
 		@TANK[Food]
 		{
-			amount = 7815
-			maxAmount = 7815
+			@amount = 7815
+			@maxAmount = 7815
 		}
 		@TANK[Oxygen]
 		{
-			amount = 710639
-			maxAmount = 710639
+			@amount = 710639
+			@maxAmount = 710639
 		}
 		@TANK[Water]
 		{
-			amount = 4800
-			maxAmount = 4800
+			@amount = 4800
+			@maxAmount = 4800
 		}
 	}
 
