--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -155,12 +155,13 @@ RTGFUELCONFIG
 	}
 }
 
-@PART[NP_FreyjaCapsule]:FOR[KSPTM]:AFTER[RealismOverhaul]
+@PART[NP_FreyjaCapsule]:AFTER[RealismOverhaul]
 {
 	//Fix Freyja node positions
 	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
 }
+
 @PART[inflato1]:FOR[KSPTM]:AFTER[RealismOverhaul]
 {
 	//Changing oxygen = 1895036, food = 20838
@@ -179,6 +180,7 @@ RTGFUELCONFIG
 	}
 
 }
+
 @PART[crewCabin]:AFTER[RealismOverhaul]
 {
 	//Changing oxygen = 710639, food = 7815, water = 4800.
@@ -202,19 +204,66 @@ RTGFUELCONFIG
 	}
 
 }
-+PART[NP_FreyjaCapsule]:AFTER[RealismOverhaul]
+
++PART[NP_FreyjaCapsule]:FINAL
 {
 	//Make changes to Freyja Capsule for use in the MAV
 	@name = KSPtM_Freyja4ManCapsule
-	@mass = 4.75
+	@mass = 4.2
 	@title = KSPtM MAV Crew Capsule
 	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@maxtemp = 1300
 	@CrewCapacity = 4
-	@MODULE[ModuleFuelTanks]
+	!MODULE[ModuleFuelTanks] {}
+	MODULE
 	{
-		@volume = 15000
+		name = ModuleFuelTanks
+		volume = 15000
+		basemass = -1
+		type = ServiceModule
+		TANK
+		{
+			name = ElectricCharge
+			amount = 45000
+			maxAmount = 45000
+		}
+		TANK
+		{
+			name = Oxygen
+			amount = 100
+			maxAmount = 100
+		}
+		TANK
+		{
+			name = Food
+			amount = 5
+			maxAmount = 5
+		}
+		TANK
+		{
+			name = Water
+			amount = 5
+			maxAmount = 5
+		}
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 100
+		}
+		TANK
+		{
+			name = Waste
+			amount = 0
+			maxAmount = 6
+		}
+		TANK
+		{
+			name = WasteWater
+			amount = 0
+			maxAmount = 6
+		}
 	}
 	!MODULE[ModuleReactionWheel]
 	{
@@ -225,6 +274,26 @@ RTGFUELCONFIG
 	!RESOURCE[Ablator]
 	{
 	}
+	MODULE
+	{
+		name = TacGenericConverter
+		converterName = CDRA
+		conversionRate = 4.0	// # of people - Figures based on per/person
+		inputResources = CarbonDioxide, 0.0058912100, ElectricCharge, 0.010, LithiumPeroxide, 0.0000051872
+		outputResources = Oxygen, 0.0029240301, true, Waste, 0.0000257297, true
+	}
+	MODULE
+    {
+        name = KeepFitPartModule
+		strActivityLevel = CRAMPED
+    }
+	MODULE
+	{
+		name = TweakScale
+		type = free
+		defaultScale = 100
+	}
+	
 }
 
 +PART[microEngineex1sat]
@@ -270,7 +339,8 @@ RTGFUELCONFIG
 		inputResources = WasteWater, 3, ElectricCharge, 0.1
 	}
 }
-+PART[TacWaterPurifierLarge]:FOR[KSPtM]
+
++PART[TacWaterPurifierLarge]:FINAL
 {
 	//Adding ODT's WRS
 	%RSSROConfig = True
@@ -292,7 +362,7 @@ RTGFUELCONFIG
 	{
 	}
 }
-+PART[TacCarbonExtractor]:FOR[KSPtM]
++PART[TacCarbonExtractor]:FINAL
 {
 	//Adding ODT's CDRA
 	%RSSROConfig = True
@@ -310,5 +380,96 @@ RTGFUELCONFIG
 	}
 	!RESOURCE[*]
 	{
+	}
+}
+
++PART[KWadapter2x1]:FINAL
+{
+	//Adding the MAV aeroshell upper
+	%RSSROConfig = True
+	%MODEL
+	{
+		%scale = 6, 2.35, 6
+	}
+	@name = KSPtMadapterMAV12m
+	@title = MAV Interstage Descent Aeroshell
+	@description = An interstage capable of one size to another. 2:1 ratio.
+	@mass = 1.55
+	@node_stack_bottom = 0.0, -1.52, 0.0, 0.0, -1.0, 0.0, 5
+	@node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 5
+	@rescaleFactor = 1.0
+	@crashTolerance = 5	
+	@maxTemp = 600	
+}
+
++PART[KWadapter2x1]:FINAL
+{
+	//Adding the MAV aeroshell upper
+	%RSSROConfig = True
+	%MODEL
+	{
+		%scale = 6, 2.35, 6
+	}
+	@name = KSPtM_MAV_interstage
+	@title = MAV Interstage Descent Aeroshell (LEGACY)
+	@description = An interstage capable of one size to another. 2:1 ratio.
+	@mass = 1.55
+	@node_stack_bottom = 0.0, -1.52, 0.0, 0.0, -1.0, 0.0, 5
+	@node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 5
+	@rescaleFactor = 1.0
+	@crashTolerance = 5	
+	@maxTemp = 600
+}
+
++PART[ObConicalHeatShield2]
+{
+	%RSSROConfig = True
+    @name = KSPtM_MAV_heatshield
+    @rescaleFactor = 4.8
+    @node_stack_bottom = 0.0, -0.310, 0.0, 0.0, -1.0, 0.0, 3
+    @node_stack_top = 0.0, 0.260, 0.0, 0.0, 1.0, 0.0, 3
+    @cost = 900
+    @TechRequired = advLanding
+    @entryCost = 1800
+    @title = KSP to Mars MAV Heat Shield
+    @mass = 1.0
+    @bulkheadProfiles = size3
+	!MODULE[ModuleJettison] {}
+    @MODULE[ModuleDecouple]
+    {
+        @ejectionForce = 300
+    }
+	!MODULE[ModuleAblator] {}
+	!MODULE[ModuleHeatShield] {}
+	!MODULE[ModuleAeroReentry] {}
+	!RESOURCE[AblativeShielding] {}
+	!RESOURCE[Ablator] {}
+	@emissiveConst = 0.6 // not too absorptive for reentry
+	%thermalMassModifier = 1.0
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		lossExp = -6000
+		lossConst = 0.007
+		pyrolysisLossFactor = 6000
+		ablationTempThresh = 500
+		reentryConductivity = 0.01
+		//reentryConductivity = 0.12
+		//@reentryConductivity = #$../heatConductivity$ // if it exists, use it
+	}
+	@MODULE[ModuleAblator]:NEEDS[DeadlyReentry]
+	{
+		@name = ModuleHeatShield
+		@pyrolysisLossFactor = 60000
+		skinThicknessFactor = 0.2 // should be higher for this part, is heatshield
+		skinHeatConductivity = 0.00045
+		skinMaxTemp = 2200 // lunar rated
+	}
+	RESOURCE
+	{
+		name = Ablator
+		amount = 760
+		maxAmount = 760
 	}
 }
