--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -369,7 +369,7 @@ RTGFUELCONFIG
 	!MODULE[Tweakscale]
 	{
 	}
-	@name = KSPtM Orbiter CDRA
+	@name = KSPtMorbiterCDRA
 	@mass = 0.6
 	@description = KSPtM ODT CDRA.  Uses a 4-bed molecular sieve.  
 	@MODULE[TacGenericConverter]
@@ -383,45 +383,7 @@ RTGFUELCONFIG
 	}
 }
 
-+PART[KWadapter2x1]:FINAL
-{
-	//Adding the MAV aeroshell upper
-	%RSSROConfig = True
-	%MODEL
-	{
-		%scale = 6, 2.35, 6
-	}
-	@name = KSPtMadapterMAV12m
-	@title = MAV Interstage Descent Aeroshell
-	@description = An interstage capable of one size to another. 2:1 ratio.
-	@mass = 1.55
-	@node_stack_bottom = 0.0, -1.52, 0.0, 0.0, -1.0, 0.0, 5
-	@node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 5
-	@rescaleFactor = 1.0
-	@crashTolerance = 5	
-	@maxTemp = 600	
-}
-
-+PART[KWadapter2x1]:FINAL
-{
-	//Adding the MAV aeroshell upper
-	%RSSROConfig = True
-	%MODEL
-	{
-		%scale = 6, 2.35, 6
-	}
-	@name = KSPtM_MAV_interstage
-	@title = MAV Interstage Descent Aeroshell (LEGACY)
-	@description = An interstage capable of one size to another. 2:1 ratio.
-	@mass = 1.55
-	@node_stack_bottom = 0.0, -1.52, 0.0, 0.0, -1.0, 0.0, 5
-	@node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 5
-	@rescaleFactor = 1.0
-	@crashTolerance = 5	
-	@maxTemp = 600
-}
-
-+PART[ObConicalHeatShield2]
++PART[ObConicalHeatShield2]:FOR[KSPtM]
 {
 	%RSSROConfig = True
     @name = KSPtM_MAV_heatshield
@@ -473,3 +435,107 @@ RTGFUELCONFIG
 		maxAmount = 760
 	}
 }
+
+PART
+{
+	//Adding the MAV aeroshell upper portion
+	RSSROConfig = True
+	name = KSPtMadapterMAV6x11.4m
+	module = Part
+	MODEL 
+	{
+		model = KSPtoMars/Parts/Structural/adapter_6x11.4/model
+		texture = model000 , KSPtoMars/Parts/Utility/ballute/model000
+		scale = 1, 0.666667, 1
+	}
+	author = Mariohm1311 for KSPtoMars
+	rescaleFactor = 1.0
+	node_stack_top = 0.0, 2, 0.0, 0.0, 1.0, 0.0, 2 //we should tweak this if we can.  
+	node_stack_bottom = 0.0, -2, 0.0, 0.0, -1.0, 0.0, 3
+	node_attach = 0.0, 0.0, 1.25, 0.0, 0.0, -1.0, 1
+	TechRequired = supersonicFlight
+	entryCost = 18000
+	cost = 800
+	category = FuelTank
+	subcategory = 0
+	title = MAV Interstage Descent Aeroshell
+	manufacturer = Our Lord and Savior Arrowstar, God of Orbits
+	description = An interstage capable of one size to another. 1.9:1 ratio.
+	attachRules = 1,1,1,1,1
+	mass = 1.55
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.3
+	angularDrag = 1
+	crashTolerance = 5
+	maxTemp = 600 // = 3000
+	emissiveConstant = 0.8
+	fuelCrossFeed = False
+	bulkheadProfiles = size2, size3, srf
+}
+
+PART
+{
+	name = KSPtMballute
+	module = Part
+	author = Mariohm1311 for KSPtoMars
+	MODEL 
+	{
+		model = KSPtoMars/Parts/Utility/ballute/model
+		texture = model000 , KSPtoMars/Parts/Utility/ballute/model000
+		texture = model001 , KSPtoMars/Parts/Utility/ballute/model001	
+	}
+	scale = 1
+	rescaleFactor = 1
+	node_attach = 0.0, 0.0, 0.05, 0.0, 0.0, 1.0
+	sound_parachute_open = activate
+	TechRequired = survivability
+	entryCost = 2800
+	cost = 400
+	category = Utility
+	subcategory = 0
+	title = KSPtM Mk22-R Radial-Mount Ballute
+	manufacturer = Our Lord and Savior Arrowstar, God of Orbits
+	description = Gotta love burble fences.
+	attachRules = 0,1,0,0,0
+	mass = 0.1
+	dragModelType = default
+	angularDrag = 3
+	crashTolerance = 12
+	maxTemp = 1500 // = 3100
+	emissiveConstant = 0.7
+	breakingForce = 100
+	breakingTorque = 50
+	bodyLiftMultiplier = 0
+	stageOffset = -1
+	bulkheadProfiles = srf
+	MODULE
+	{
+		name = ModuleParachute
+		invertCanopy = true
+		autoCutSpeed = 0.5
+		capName = Cap
+		canopyName = Canopy
+		fullyDeployedAnimation = fulldeploy
+		fullyDeployedDrag = 1000000000
+		minAirPressureToOpen = 0.001
+		clampMinAirPressure = 0.001
+		deployAltitude = 20000
+		deploymentSpeed = 0.1
+		chuteMaxTemp = 650
+	}
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 4
+		useStaging = True
+		useEvent = False
+	}
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = DEPLOYED
+		dragModifier = 58
+	}
+}
+
