LV Engine Tweaks
Added tweaks to engines for use with the Launch Vehicles.

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -539,3 +539,112 @@ PART
 	}
 }
 
+@PART[HG10B2]:LAST
+{
+	%RSSROConfig = True
+	!MODULE[TweakScale]
+	{
+	}
+	!mesh = DELETE
+	MODEL
+	{
+		model = AerojetKerbodyne/Parts/Engine/HG10B2/HG10B2
+		scale = 1.94975275, 2.0, 1.94975275
+	}
+	@rescaleFactor = 0.9
+	@node_stack_top = 0.0, 0.50, 0, 0.0, 1.0, 0.0, 1
+	@node_stack_top1 = 0.0, 1.48, 0, 0.0, 1.0, 0.0, 1
+	@node_stack_bottom = 0.0, -3.2, 0.0, 0.0, -1.0, 0.0, 2
+	@category = Propulsion
+	@title = RL60 
+	@manufacturer = Pratt & Whitney
+	@description = Next generation cryogenic upper stage engine designed to replace the RL10, providing higher performance while maintaining the same installation envelope.  Also available in a lower 180kN thrust Vinci-180 model.
+	@attachRules = 1,0,1,0,0
+	%mass = 0.498
+	%maxTemp = 1973.15
+	%crashTolerance = 12
+	%breakingForce = 250
+	%breakingTorque = 250
+	@MODULE[ModuleEngines*]
+	{
+		%maxThrust = 250
+		%minThrust = 250
+		%heatProduction = 100
+		@atmosphereCurve
+		{
+			@key,0 = 0 465
+			@key,1 = 1 230
+		}
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = LqdHydrogen
+			@ratio = 0.733
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.267
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 45
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	MODULE
+	{
+		name = ModuleGimbal
+		gimbalTransformName = thrustTransform
+		gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	!MODULE[ModuleAlternator]
+	{
+	}
+	!RESOURCE[ElectricCharge]
+	{
+	}
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		origMass = 0.159
+		configuration = RL60
+		modded = false
+		CONFIG
+		{
+			name = RL60
+			maxThrust = 250
+			minThrust = 250
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = LqdHydrogen
+				ratio = 0.733
+				DrawGauge = true
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.267
+			}
+			atmosphereCurve
+			{
+				key = 0 465
+				key = 1 230
+			}
+		}
+	}
+}
+
+@PART[RD171]:LAST
+{
+	%rescaleFactor = 0.92
+	
+}
+
+
