--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -155,13 +155,6 @@ RTGFUELCONFIG
 	}
 }
 
-@PART[NP_FreyjaCapsule]:AFTER[RealismOverhaul]
-{
-	//Fix Freyja node positions
-	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+[0, 0.4, 0, 0, 0, 0, 0]
-	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
-}
-
 @PART[inflato1]:FOR[KSPTM]:AFTER[RealismOverhaul]
 {
 	//Changing oxygen = 1895036, food = 20838
@@ -209,7 +202,7 @@ RTGFUELCONFIG
 {
 	//Make changes to Freyja Capsule for use in the MAV
 	@name = KSPtM_Freyja4ManCapsule
-	@mass = 4.2
+	@mass = 4.25
 	@title = KSPtM MAV Crew Capsule
 	@node_stack_top = 0.0, 1.49, 0.0, 0.0, 1.0, 0.0, 2 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
@@ -293,7 +286,13 @@ RTGFUELCONFIG
         name = KeepFitPartModule
 		strActivityLevel = CRAMPED
     }
-		
+	MODULE
+    {
+		//add 2 GPHS-RTGs
+		name = ModuleDiminishingRTG
+        efficiency = 0.1386667 // factor (0..1) of 'pep' into ElectricCharge 
+        volume = 0.7872426   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
+	}
 }
 
 +PART[microEngineex1sat]
@@ -440,9 +439,6 @@ RTGFUELCONFIG
 {
 	//Adding the MAV ascent fuel tanks
 	%RSSROConfig = True
-	!MODULE[Tweakscale]
-	{
-	}
 	@name = KSPtMascentTankMAV
 	@title = KSPtM MAV Ascent Fuel Tank
 	@description = KSPtM MAV Ascent Fuel Tank. 
