--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -286,12 +286,12 @@ RTGFUELCONFIG
         name = KeepFitPartModule
 		strActivityLevel = CRAMPED
     }
-	MODULE
+	//MODULE
     {
 		//add 2 GPHS-RTGs
-		name = ModuleDiminishingRTG
-        efficiency = 0.1386667 // factor (0..1) of 'pep' into ElectricCharge 
-        volume = 0.7872426   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
+		//name = ModuleDiminishingRTG
+        //efficiency = 0.1386667 // factor (0..1) of 'pep' into ElectricCharge 
+        //volume = 0.7872426   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
 	}
 }
 
