--- a/GameData/KSPtoMars/Parts/Orbiter/odtmediumtank.cfg
+++ b/GameData/KSPtoMars/Parts/Orbiter/odtmediumtank.cfg
@@ -11,12 +11,9 @@ PART
 	
 	node_stack_topKW2mFairingPF2 = 0,-2.0,0,0,-1,0,2
 	node_stack_topKW5mFairingPF1 = 0,2.11201,0,0,1,0,4
+	node_stack_bottom = 0,-4.0,0,0,-1,0,4
+
 	node_attach = -1.24771,0,0,-1,0,0,2
-	
-	fx_gasBurst_white = 0, 2.993708, 0, 0, 1, 0, deploy
-	sound_vent_large = deploy
-	fx_gasBurst_white = 0, -1.574926, 0, 0, 1, 0, deploy
-	sound_vent_large = deploy
 	
 	CrewCapacity = 0
 	TechRequired = largeVolumeContainment
@@ -25,7 +22,7 @@ PART
 	category = Propulsion
 	subcategory = 0
 	title = NTR Departure Tank 2
-	manufacturer = UbioZur Welding Ltd
+	manufacturer = Michoud Assembly Facility
 	description = Warranty void during re-entry.
 	attachRules = 1,1,1,1,0,0,0
 	mass = 10.533
