LDT MAV Changes

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -208,84 +208,7 @@ RTGFUELCONFIG
 	@node_stack_bottom = 0.0, -0.202, 0.0, 0.0, -1.0, 0.0, 6 //+[0, 0.4, 0, 0, 0, 0, 0]
 	@maxtemp = 1300
 	@CrewCapacity = 4
-	!MODULE[ModuleFuelTanks] {}
-	MODULE
-	{
-		name = ModuleFuelTanks
-		volume = 15000
-		basemass = -1
-		type = ServiceModule
-		TANK
-		{
-			name = ElectricCharge
-			amount = 50000
-			maxAmount = 50000
-		}
-		TANK
-		{
-			name = Oxygen
-			amount = 100
-			maxAmount = 100
-		}
-		TANK
-		{
-			name = Food
-			amount = 5
-			maxAmount = 5
-		}
-		TANK
-		{
-			name = Water
-			amount = 30
-			maxAmount = 30
-		}
-		TANK
-		{
-			name = CarbonDioxide
-			amount = 0
-			maxAmount = 100
-		}
-		TANK
-		{
-			name = Waste
-			amount = 0
-			maxAmount = 12
-		}
-		TANK
-		{
-			name = WasteWater
-			amount = 0
-			maxAmount = 5
-		}
-		TANK
-		{
-			name = LithiumPeroxide
-			amount = 30
-			maxAmount = 30
-		}
-	}
-	!MODULE[ModuleReactionWheel]
-	{
-	}
-	!MODULE[ModuleAblator]
-	{
-	}
-	!RESOURCE[Ablator]
-	{
-	}
-	MODULE
-	{
-		name = TacGenericConverter
-		converterName = CDRA
-		conversionRate = 4.0	// # of people - Figures based on per/person
-		inputResources = CarbonDioxide, 0.0058912100, ElectricCharge, 0.010, LithiumPeroxide, 0.0000051872
-		outputResources = Oxygen, 0.0029240301, true, Waste, 0.0000257297, true
-	}
-	MODULE
-    {
-        name = KeepFitPartModule
-		strActivityLevel = CRAMPED
-    }
+	
 	//MODULE
     {
 		//add 2 GPHS-RTGs
@@ -442,18 +365,40 @@ RTGFUELCONFIG
 	@name = KSPtMascentTankMAV
 	@title = KSPtM MAV Ascent Fuel Tank
 	@description = KSPtM MAV Ascent Fuel Tank. 
-	@mass = 0.15
-	+rescaleFactor = 6
+	@mass = 0.072
+	+rescaleFactor = 4.8
 	!RESOURCE[*]
 	{
 	}
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 2630
+		volume = 1250
 		basemass = -1
 		type = ServiceModule
 		
+	}
+}
++PART[Antennacomtec1]:FOR[KSPtM]
+{
+	//Adding the MAV directional Antenna
+	%RSSROConfig = True
+	@name = KSPtMantennaDishMAV
+	@title = KSPtM MAV High Gain Antenna
+	@description = KSPtM MAV High Gain Antenna 
+	MODULE[ModuleRTAntenna]
+	{
+		Mode0DishRange = 0
+		Mode1DishRange = 30000000
+		EnergyCost = 0.02
+		MaxQ = 10000
+		DishAngle = 40
+		TRANSMITTER
+		{
+			PacketInterval = 0.5
+			PacketSize = 0.2
+			PacketResourceCost = 0.1
+		}
 	}
 }
 
