LDT MAV Changes

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -386,6 +386,7 @@ RTGFUELCONFIG
 	@name = KSPtMantennaDishMAV
 	@title = KSPtM MAV High Gain Antenna
 	@description = KSPtM MAV High Gain Antenna 
+	@mass = 0.02
 	MODULE[ModuleRTAntenna]
 	{
 		Mode0DishRange = 0
