Minor Node Update
Fixed ODT tank and Energia Fairing

--- a/GameData/KSPtoMars/Parts/Orbiter/odtmediumtank.cfg
+++ b/GameData/KSPtoMars/Parts/Orbiter/odtmediumtank.cfg
@@ -9,8 +9,8 @@ PART
 	rescaleFactor = 4.6
 	PhysicsSignificance = -1
 	
-	node_stack_topKW2mFairingPF2 = 0,-2.0,0,0,-1,0,2
-	node_stack_topKW5mFairingPF1 = 0,2.11201,0,0,1,0,4
+	node_stack_bottom= 0,-3.0,0,0,-1,0,2
+	node_stack_top = 0,0,0,0,1,0,4
 	node_attach = -1.24771,0,0,-1,0,0,2
 	
 	fx_gasBurst_white = 0, 2.993708, 0, 0, 1, 0, deploy
@@ -49,7 +49,7 @@ PART
 	MODEL
 	{
 		model = KWRocketry/Parts/Fairings/UnifiedFairings5m/KW_Fairing_Base5m
-		position = 0,0,0
+		position = 0,1,0
 		scale = 0.625,0.625,0.625
 		rotation = 0,0,0
 	}
