LDT MAV Parts & CFG edits

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -77,8 +77,8 @@ RESOURCE_DEFINITION
 {
 	//Add Pu-238 for JDiminishingRTG
     name        = Plutonium238
-    density     = 0.019816 //Doesn't really matter, since the MHW-RTG only uses 1 fuel type...
-    unitcost    = 80 //This doesn't really matter all that much.
+    density     = 0.002668627 //Doesn't really matter, since the MHW-RTG only uses 1 fuel type...  Units are t/u (t/L)
+    unitcost    = 80 //This doesn't really matter all that much, although this is quite a low guess.
     flowmode    = NO_FLOW
     transfer    = NONE
     isTweakable = true
@@ -89,7 +89,7 @@ RTGFUELCONFIG
 	//Add Pu-238 for JDiminishingRTG
     name     = Plutonium238 // MUST have matching name in RESOURCE_DEFINITION
     halflife = 301.84         // in kerbal years (earth*3.43)
-    pep      = 5.3333333 // Power density of the material (Watts/kilogram).  Calculated to give 157 W at mission start, and decreased by a factor of 10^-3, since it was performing incorrectly.  KSP uses t for mass, not kg... ~C_Z
+    pep      = 5.333333333 // Power density of the material (Watts/kilogram).  Calculated to give 157 W at mission start, and decreased by a factor of 10^-3, since it was performing incorrectly, likely due to using W instead of kW.  Oddly enough, uses kg instead of t.
 }
 
 @PART[rtg]:FOR[KSPtM]:AFTER[JDiminishingRTG]
@@ -100,7 +100,7 @@ RTGFUELCONFIG
 	@MODULE[ModuleDiminishingRTG]
     {
         @efficiency = 0.065416667 // factor (0..1) of 'pep' into ElectricCharge 
-        @volume = 0.22708922   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
+        @volume = 1.68626061   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
 		
     }
 }
@@ -209,13 +209,21 @@ RTGFUELCONFIG
 	@maxtemp = 1300
 	@CrewCapacity = 4
 	
-	//MODULE
+}
+
++PART[rtg]:FINAL
+{
+	@name = TestGPHS_RTG
+	@title = GPHS RTG 
+	//JDiminishingRTG support for MHW-RTG
+	@mass = 0.04875 //37.7kg-4.5kg
+    !MODULE[ModuleGenerator] {}
+	@MODULE[ModuleDiminishingRTG]
     {
-		//add 2 GPHS-RTGs
-		//name = ModuleDiminishingRTG
-        //efficiency = 0.1386667 // factor (0..1) of 'pep' into ElectricCharge 
-        //volume = 0.7872426   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
-	}
+        @efficiency = 0.068181818  // factor (0..1) of 'pep' into ElectricCharge 
+        @volume = 3.091477785   // roughly, in deciliters. ("units").  Units are actually L, which has been corrected for ~C_Z
+		
+    }
 }
 
 +PART[microEngineex1sat]
