--- a/GameData/KSPtoMars/Parts/LDT_Tanks/Cylinder_1/KSPtMtankDescentMAV.cfg
+++ b/GameData/KSPtoMars/Parts/LDT_Tanks/Cylinder_1/KSPtMtankDescentMAV.cfg
@@ -5,32 +5,51 @@ PART
 	author = Saabstory88 for KSPtoMars
 
 	RSSROConfig = True
+
+	mesh = ldt_cylinder.mu
+	scale = 1.0
+	rescaleFactor = 1.0
 	
-	PhysicsSignificance = -1
+	TechRequired = start
+	entryCost = 525
+	cost = 525
+
+	category     = Structural
+	subcategory  = 0
+	title        = MAV Descent Stage Tank
+	manufacturer = Our Lord and Saviour Arrowstar, God of Orbits
+	description  = A tank.  Woot.
+
+	attachRules = 1,1,1,1,0
+
+	mass = 0.12
+
+	dragModelType  = default
+	maximum_drag   = 0.20
+	minimum_drag   = 0.15
+	angularDrag    = 2
+	crashTolerance = 6
+	maxTemp        = 600
+
 	
-	CrewCapacity = 0
-	TechRequired = largeVolumeContainment
-	entryCost = 142600
-	cost = 27055
-	category = Propulsion
-	subcategory = 0
-	
-	title = KSPtM MAV Descent Fuel Tank
-	manufacturer = UbioZur Welding Ltd
-	description = Warranty void during re-entry.
-	attachRules = 1,1,1,1,0,0,0
-	mass = 27.68
-	
-	dragModelType = default
-	maximum_drag = 0
-	minimum_drag = 0
-	angularDrag = 0
-	crashTolerance = 7.54286
-	breakingForce = 1235.189
-	breakingTorque = 1235.189
-	maxTemp = 1073.15
-	fuelCrossFeed = True
-	
-	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 16000
+		basemass = -1
+		type = BalloonCryo
+		TANK
+		{
+			name = LqdOxygen
+			amount = 1680
+			maxAmount = 3792
+		}
+		TANK
+		{
+			name = LqdHydrogen
+			amount = 5408.6
+			maxAmount = 12208
+		}
+	}
 
 }
