--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -518,3 +518,88 @@ RTGFUELCONFIG
 	%rescaleFactor = 0.92
 	
 }
+
+//Add plumes to cluster for NovaPunch
+@PART[NP_lfe_5m_AdvHL]:LAST
+{
+    PLUME
+    {
+        name = Hydrolox-Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,-0.5
+        plumePosition = 0,0,-0.3
+        fixedScale = 2.5
+        energy = 2
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Hydrolox-Lower
+		}
+	}
+}
+
+@PART[LAStop375]:LAST
+{
+	%RSSROConfig = True
+	!MODULE[TweakScale]
+	{
+	}
+	!mesh = DELETE
+	MODEL
+	{
+		model = AerojetKerbodyne/Parts/Utility/LAStop375/lastop
+		scale = 1.358243, 1.358243, 1.358243
+	}
+	@rescaleFactor = 1.0
+	@node_stack_bottom = 0.0, -0.767407295, 0.0, 0.0, -1.0, 0.0, 0
+	@title = **TEST** Taurus HCV LAS Jettison Motor
+	@description = The Launch Abort System jettison motor for the Taurus HCV with Kerbodyne AeroCap.
+	@mass = 0.574
+	@crashTolerance = 12
+	@breakingForce = 250
+	@breakingTorque = 250
+	@maxTemp = 1973.15
+	@MODULE[ModuleEngines*],0
+	{
+		@exhaustDamage = True
+		@minThrust = 100
+		@maxThrust = 100
+		@heatProduction = 100
+		@atmosphereCurve
+		{
+			@key,0 = 0 230
+			@key,1 = 1 200
+		}
+	}
+	@MODULE[ModuleEngines*],0
+	{
+		@exhaustDamage = True
+		@minThrust = 5
+		@maxThrust = 5
+		@heatProduction = 10
+		@atmosphereCurve
+		{
+			@key,0 = 0 230
+			@key,1 = 1 200
+		}
+	}
+	!RESOURCE[SolidFuel]
+	{
+	}
+	MODULE
+	{
+		name = ModuleFuelTanks
+		type = HTPB
+		volume = 150.85
+		basemass = -1
+	}
+}
