ODT Part Update

--- a/GameData/KSPtoMars/KSPtMChanges.cfg
+++ b/GameData/KSPtoMars/KSPtMChanges.cfg
@@ -411,7 +411,7 @@ RTGFUELCONFIG
 	}
 }
 
-@PART[HG10B2]:LAST
+@PART[HG10B2]:FINAL
 {
 	%RSSROConfig = True
 	!MODULE[TweakScale]
@@ -513,7 +513,7 @@ RTGFUELCONFIG
 	}
 }
 
-@PART[RD171]:LAST
+@PART[RD171]:FINAL
 {
 	%rescaleFactor = 0.92
 	
@@ -547,7 +547,7 @@ RTGFUELCONFIG
 	}
 }
 
-@PART[LAStop375]:LAST
+@PART[LAStop375]:FINAL
 {
 	%RSSROConfig = True
 	!MODULE[TweakScale]
