--- a/GameData/KSPtoMars/Parts/Launch_Vehicles/ACES/ACES.cfg
+++ b/GameData/KSPtoMars/Parts/Launch_Vehicles/ACES/ACES.cfg
@@ -15,6 +15,7 @@ node_stack_bottom = 0.0, 4.0, 0.0, 0.0, -1.0, 0.0, 4
 node_stack_top    = 0.0,  18.20, 0.0, 0.0, 1.0, 0.0, 4
 node_attach = -2.5, 0.0, 0.0, -1.0, 0.0, 0.0, 2
 
+CoMOffset = 0.0, 11.0, 0.0
 
 TechRequired = start
 entryCost = 525
