--- a/GameData/KSPtoMars/Parts/Orbiter/odtlargetank.cfg
+++ b/GameData/KSPtoMars/Parts/Orbiter/odtlargetank.cfg
@@ -13,7 +13,8 @@ PART
 	node_stack_bottom02adapter-125-0625-43 = 0.44758,-3.98753,0,0,1,0,2
 	node_stack_bottom03adapter-125-0625-43 = 0,-3.98753,-0.44758,0,1,0,2
 	node_stack_bottom04adapter-125-0625-43 = 0,-3.98753,0.44758,0,1,0,2
-	node_stack_topadapter-25-1251 = 0,5.12187,0,0,1,0,5
+	node_stack_top = 0,5.12187,0,0,1,0,6
+	node_stack_bottom = 0.0,-4.25,0,0,1,0,6
 	node_attach = -1.24771,0,0,-1,0,0,2
 	
 	fx_gasBurst_white = 0, -3.4384, 0, 0, 1, 0, deploy
@@ -39,8 +40,8 @@ PART
 	minimum_drag = 0
 	angularDrag = 0
 	crashTolerance = 7.54286
-	breakingForce = 1235.189
-	breakingTorque = 1235.189
+	breakingForce = 3500.00
+	breakingTorque = 3500.00
 	maxTemp = 1073.15
 	fuelCrossFeed = True
 	
@@ -131,6 +132,13 @@ PART
 	{
 		name = MPFFix
 		plusEnabled = True
+	}
+	
+	MODULE
+	{
+		name = ModuleDockingNode
+		referenceAttachNode = top
+		nodeType = size2
 	}
 	
 
