MAV Aeroshell Fix
Fixed collider and added decoupler

--- a/GameData/KSPtoMars/Parts/Structural/adapter_6x11.4/KSPtMadapterMAV6x11.4m.cfg
+++ b/GameData/KSPtoMars/Parts/Structural/adapter_6x11.4/KSPtMadapterMAV6x11.4m.cfg
@@ -4,16 +4,16 @@ PART
 	RSSROConfig = True
 	name = KSPtMadapterMAV6x11.4m
 	module = Part
-	MODEL 
+	MODEL
 	{
 		model = KSPtoMars/Parts/Structural/adapter_6x11.4/model
 		texture = model000 , KSPtoMars/Parts/Structural/adapter_6x11.4/model000
 	}
 	author = Mariohm1311 for KSPtoMars
 	rescaleFactor = 1.0
-	node_stack_top = 0.0, 2, 0.0, 0.0, 1.0, 0.0, 2 //we should tweak this if we can.  
+	node_stack_top = 0.0, -0.45, 0.0, 0.0, 1.0, 0.0, 2 //we should tweak this if we can.
 	node_stack_bottom = 0.0, -2, 0.0, 0.0, -1.0, 0.0, 3
-	node_attach = 0.0, 0.0, 1.25, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, 0.0, 5.7, 0.0, 0.0, -1.0, 1
 	TechRequired = supersonicFlight
 	entryCost = 18000
 	cost = 800
@@ -33,4 +33,12 @@ PART
 	emissiveConstant = 0.8
 	fuelCrossFeed = False
 	bulkheadProfiles = size2, size3, srf
+	
+	MODULE
+	{
+		name = ModuleDecouple
+		ejectionForce = 100
+		explosiveNodeID = top
+	}
+
 }
