LDT MAV DS 4.3, Part Changes
LDT parts were updated.  Textures were replaced for the HAB tanks & MAV
aeroshell.  Node positions were updated for the MAV aeroshell, and the
engine mountings moved to a separate part.  The  MAV DS was updated to
version 4.3b, which reflected the change in the aeroshell and also had
minor optimization changes.

--- a/GameData/KSPtoMars/Parts/Structural/KSPtMengineMountMAV/KSPtMengineMountMAV.cfg
+++ b/GameData/KSPtoMars/Parts/Structural/KSPtMengineMountMAV/KSPtMengineMountMAV.cfg
@@ -1,21 +1,18 @@
 PART
 {
-	name = KSPtMaeroshellMAV
+	name = KSPtMengineMountMAV
 	module = Part
 	author = KSPtoMars
 	rescaleFactor = 1
-	PhysicsSignificance = -1
-	node_stack_bottom01pointyNoseConeB2 = -3.2596,-0.62564,2.39278,-0.17569,-0.96864,0.17569,1
-	node_stack_bottom01pointyNoseConeB3 = -2.39278,-0.62564,3.2596,-0.17569,-0.96864,0.17569,1
-	node_stack_bottom01pointyNoseConeB7 = 2.39278,-0.62564,3.2596,0.17569,-0.96864,0.17569,1
-	node_stack_bottom01pointyNoseConeB8 = 3.2596,-0.62564,2.39278,0.17569,-0.96864,0.17569,1
-	node_stack_bottom01pointyNoseConeB12 = 3.2596,-0.62564,-2.39278,0.17569,-0.96864,-0.17569,1
-	node_stack_bottom01pointyNoseConeB13 = 2.39278,-0.62564,-3.2596,0.17569,-0.96864,-0.17569,1
-	node_stack_bottom01pointyNoseConeB17 = -2.39277,-0.62564,-3.2596,-0.17569,-0.96864,-0.17569,1
-	node_stack_bottom01pointyNoseConeB18 = -3.2596,-0.62564,-2.39278,-0.17569,-0.96864,-0.17569,1
-	node_stack_topKSPtMadapterMAV6x11.4m0 = 0,2.03856,0,0,1,0,2
-	node_stack_bottomKSPtMadapterMAV6x11.4m0 = 0,-1.96144,0,0,-1,0,3
-	node_attach = 0,0,1.25,0,0,-1,1
+	node_stack_side01 = -3.2596,-0.62564,2.39278,-0.17569,-0.96864,0.17569,1
+	node_stack_side02 = -2.39278,-0.62564,3.2596,-0.17569,-0.96864,0.17569,1
+	node_stack_side03 = 2.39278,-0.62564,3.2596,0.17569,-0.96864,0.17569,1
+	node_stack_side04 = 3.2596,-0.62564,2.39278,0.17569,-0.96864,0.17569,1
+	node_stack_side05 = 3.2596,-0.62564,-2.39278,0.17569,-0.96864,-0.17569,1
+	node_stack_side06 = 2.39278,-0.62564,-3.2596,0.17569,-0.96864,-0.17569,1
+	node_stack_side07 = -2.39277,-0.62564,-3.2596,-0.17569,-0.96864,-0.17569,1
+	node_stack_side08 = -3.2596,-0.62564,-2.39278,-0.17569,-0.96864,-0.17569,1
+	node_stack_top= 0.0, -0.965, 0.0, 0.0, 1.0, 0.0, 3 
 	CrewCapacity = 0
 	TechRequired = supersonicFlight
 	entryCost = 116600
@@ -26,7 +23,7 @@ PART
 	manufacturer = Our Lord and Saviour Arrowstar, God of Orbits
 	description = Warranty void during EDL sequences.
 	attachRules = 1,1,1,1,0,0,0
-	mass = 1.25
+	mass = 0.25
 	dragModelType = default
 	maximum_drag = 0
 	minimum_drag = 0
@@ -35,15 +32,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 1000
-	fuelCrossFeed = False
-	MODEL
-	{
-		model = KSPtoMars/Parts/Structural/adapter_6x11.4/model
-		position = 0,0.03856,0
-		scale = 1,1,1
-		rotation = 0,0,0
-		texture = model000 , KSPtoMars/Parts/Structural/adapter_6x11.4/model000
-	}
+	fuelCrossFeed = True
 	MODEL
 	{
 		model = Squad/Parts/Structural/strutCubicOcto/model
@@ -189,11 +178,6 @@ PART
 		name = ModuleAeroReentry
 		skinHeatConductivity = 0.021
 		leaveTemp = True
-	}
-	MODULE
-	{
-		name = ModuleAnimateHeat
-		ThermalAnim = Cone_Heat
 	}
 	MODULE
 	{
