--- a/GameData/KSPtoMars/Parts/Structural/adapter_6x11.4/KSPtMadapterMAV6x11.4m.cfg
+++ b/GameData/KSPtoMars/Parts/Structural/adapter_6x11.4/KSPtMadapterMAV6x11.4m.cfg
@@ -9,27 +9,28 @@ PART
 		model = KSPtoMars/Parts/Structural/adapter_6x11.4/model
 		texture = model000 , KSPtoMars/Parts/Structural/adapter_6x11.4/model000
 	}
-	author = Mariohm1311 for KSPtoMars
+	author = Mariohm1311 and Saabstory88 for KSPtoMars
 	rescaleFactor = 1.0
-	node_stack_top = 0.0, -0.45, 0.0, 0.0, 1.0, 0.0, 2 //we should tweak this if we can.
-	node_stack_bottom = 0.0, -2, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, -0.58, 0.0, 0.0, 1.0, 0.0, 2 //we should tweak this if we can.
+	node_stack_mid = 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_bottom = 0.0, -2.02, 0.0, 0.0, -1.0, 0.0, 3 //should be correctly placed, needing no tweaks  (previously, was -1.0.  EM was -0.965 for top and -1.98 for the bottom node)
 	node_attach = 0.0, 0.0, 5.7, 0.0, 0.0, -1.0, 1
 	TechRequired = supersonicFlight
 	entryCost = 18000
 	cost = 800
 	category = FuelTank
 	subcategory = 0
-	title = MAV Interstage Descent Aeroshell
+	title = MAV Descent Aeroshell
 	manufacturer = Our Lord and Savior Arrowstar, God of Orbits
-	description = An interstage capable of one size to another. 1.9:1 ratio.
+	description = An interstage capable of one size to another. 1.9:1 ratio.  Warranty void during EDL sequences.
 	attachRules = 1,1,1,1,1
-	mass = 0.70
+	mass = 1
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 1
 	crashTolerance = 5
-	maxTemp = 600 // = 3000
+	maxTemp = 1000 // = 3000
 	emissiveConstant = 0.8
 	fuelCrossFeed = False
 	bulkheadProfiles = size2, size3, srf
@@ -39,6 +40,17 @@ PART
 		name = ModuleDecouple
 		ejectionForce = 100
 		explosiveNodeID = top
+	}
+	MODULE
+	{
+		name = ModuleAeroReentry
+		skinHeatConductivity = 0.021
+		leaveTemp = True
+	}
+	MODULE
+	{
+		name = ModuleAnimateHeat
+		ThermalAnim = Cone_Heat
 	}
 
 }
